--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "emoji-mart-virtualized",
-  "version": "3.1.3",
+  "name": "@cafenono/emoji-mart-virtualized",
+  "version": "3.1.3-cafenono-0.2",
   "description": "Customizable Slack-like emoji picker for React",
   "main": "dist/index.js",
   "module": "dist-es/index.js",
   "repository": {
     "type": "git",
-    "url": "git@github.com:missive/emoji-mart.git"
+    "url": "https://github.com/cafenono/emoji-mart-virtualized.git"
   },
   "keywords": [
     "react",
@@ -16,7 +16,10 @@
   "author": "Etienne Lemay",
   "license": "BSD-3-Clause",
   "bugs": {
-    "url": "https://github.com/missive/emoji-mart/issues"
+    "url": "https://github.com/cafenono/emoji-mart-virtualized/issues"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
   },
   "homepage": "https://github.com/missive/emoji-mart",
   "dependencies": {
