--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cafenono/emoji-mart-virtualized",
-  "version": "3.1.3-cafenono-0.9.4",
+  "version": "3.1.3-cafenono-0.9.5",
   "description": "Customizable Slack-like emoji picker for React",
   "main": "dist/index.js",
   "module": "dist-es/index.js",
@@ -52,8 +52,8 @@
     "jest": "^24.9.0",
     "mkdirp": "0.5.1",
     "prettier": "^1.16.4",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-test-renderer": "^16.8.4",
     "rimraf": "2.5.2",
     "size-limit": "^0.11.4",
@@ -68,7 +68,7 @@
     "build:modern": "BABEL_ENV=modern babel src --out-dir dist-modern --ignore  '**/__tests__/*'",
     "build:docs": "cp css/emoji-mart.css docs && webpack --config ./docs/webpack.config.js",
     "build": "npm run clean && npm run build:dist",
-    "watch": "BABEL_ENV=legacy-cjs babel src --watch --out-dir dist --ignore  '**/__tests__/*'",
+    "watch": "BABEL_ENV=modern babel src --watch --out-dir dist-modern --ignore  '**/__tests__/*'",
     "start": "npm run watch",
     "react:clean": "rimraf node_modules/{react,react-dom,react-addons-test-utils}",
     "react:14": "npm run react:clean && npm i react@^0.14 react-dom@^0.14 react-addons-test-utils@^0.14 --save-dev",
