--- a/packages/emoji-mart/package.json
+++ b/packages/emoji-mart/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "emoji-mart",
-  "version": "5.2.2",
+  "name": "@cafenono/emoji-mart",
+  "version": "5.2.2-cafenono-rev4",
   "description": "Emoji picker for the web",
   "license": "MIT",
   "homepage": "https://missiveapp.com/open/emoji-mart",
   "repository": {
     "type": "git",
-    "url": "https://github.com/missive/emoji-mart",
+    "url": "https://github.com/cafenono/emoji-mart",
     "directory": "packages/emoji-mart"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
   },
   "source": "src/index.js",
   "main": "dist/main.js",
