--- a/packages/emoji-mart/package.json
+++ b/packages/emoji-mart/package.json
@@ -41,9 +41,13 @@
     "prepublishOnly": "yarn build"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.23.7",
+    "@babel/preset-react": "^7.23.3",
     "@parcel/transformer-inline-string": "2.3.2",
     "@parcel/transformer-sass": "2.3.2",
     "autoprefixer": "10.4.4",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "babel-plugin-transform-define": "^2.1.4",
     "parcel": "2.3.2",
     "preact": "10.6.4"
   },
